--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "retail",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vijaybharathwaj.github.io/Weather-Forecast/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -35,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
