--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.2.1",
     "firebase": "^8.6.1",
     "formik": "^2.2.7",
+    "gh-pages": "^3.2.0",
     "html2pdf.js": "^0.9.3",
     "material-ui-popup-state": "^1.8.3",
     "material-ui-search-bar": "^1.0.0",
