--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "retail",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vijaybharathwaj.github.io/Weather-Forecast/",
+  "homepage": "http://vijaybharathwaj.github.io/Weather-Forecast/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
